--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                     <!-- SLIDE  -->
                     <li data-index="rs-3045" data-transition="zoomout" data-slotamount="default" data-hideafterloop="0"
                         data-hideslideonmobile="off" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut"
-                        data-masterspeed="2000" data-thumb="assets/img/lion.jpg" data-rotate="0"
+                        data-masterspeed="2000" data-thumb="assets/img/manyatta.jpg" data-rotate="0"
                         data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7"
                         data-saveperformance="off" data-title="Second Slide" data-param1="" data-param2=""
                         data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8=""
